# ob_egse

./: .gitignore  CMD_IDs.py  Dev_EGSE.py  EGSE.py  README.md  TMs.py  constants.py  crc8Function.py  egse.py  egse_logger.py  hello.py  pyproject.toml  ruff.toml  send_cmd.py  sequences.py  tc.py  tm.py  tmstruct.py
src/: cmd_ids.py  constants.py  crc8_function.py  egse_logger.py  main.py  send_cmd.py  sequences.py  tc.py  tm.py  tmstruct.py
tests/: tests_main.py
